--- a/HW_01/hw1-task.ipynb
+++ b/HW_01/hw1-task.ipynb
@@ -13,21 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\D036799\\Downloads\\HW_lesson_01\n",
-      "['.ipynb_checkpoints', 'hw1-task-Copy1.ipynb', 'hw1-task-Copy2.ipynb', 'hw1-task.ipynb', 'UCI_Credit_Card.csv', '__MACOSX']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "print(os.getcwd()); print(os.listdir('.'))"
+    "#print(os.getcwd()); print(os.listdir('.'))"
    ]
   },
   {
