Task 10 image for only 350 lines of dataset
Task 10 image for only 350 lines of dataset (memory issue due to huge image size)

--- a/HW_01/hw1-task.ipynb
+++ b/HW_01/hw1-task.ipynb
@@ -3336,7 +3336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -3348,20 +3348,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>SEX</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "SEX           1\n",
+       "EDUCATION      \n",
+       "0             8\n",
+       "1          4354\n",
+       "2          5374\n",
+       "3          1990\n",
+       "4            42\n",
+       "5            95\n",
+       "6            25"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "table_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABIcAAAHbCAYAAABRBfqwAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X2U1fVh7/vPZh54GAaFBHs0FhV1bLMSGh5K0lioeDWo\nsYnxmlkZPCSVoAZ8gqsGEJG0GpEmThoTqRrJSgQRSXDlybRZjVgwakkO52hSKjal1lPTLIOIV2aU\nB519/8h1eqYaZxTGHfi+Xmu5lvPd373398d8t45vf7/fVKrVajUAAAAAFGlArRcAAAAAQO2IQwAA\nAAAFE4cAAAAACiYOAQAAABRMHAIAAAAoWH2tF/Batm3bWeslHLCGDx+SHTteqPUyKJT9R63Ye9SS\n/Uet2HvUkv1Hrdh7+2bkyObXHHfm0EGmvr6u1kugYPYftWLvUUv2H7Vi71FL9h+1Yu/1D3EIAAAA\noGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQsPpaLwAA\nAADgYPOP//iz3Hrrl/P88/9vurq6cthh/y0XXXRZRo8+Nn/8xxMyevSxGTCgrsdzliz5fJ5//vlc\neumF+eIX/zq/93vvTJI899xzueCCT2TOnCvz/vf/8X5fqzgEAAAAsB/t2bMn8+bNSXv7zTnhhN9L\nkvzgB9/PFVdcmm984ztJkptuujWHHnroq557+OFHZNasS7No0fwsX74yQ4YMyTXXzM8HP/ihfglD\niTgEAAAAsF/t2rUrHR0defHFF7rHPvCB09PU1JSurq5en3/WWf93fvazR7JkyV/kHe84Ms3Nzfn4\nx2f023rFIQAAAID9aNiwYZk165JcfvklGTHi7RkzZkzGjp2QU06ZmoaGhiTJpZde2OOyssMPPyJL\nlny+++srrrgq5503LT//+eO54467U6lU+m294hAAAADAfvaxj/33fOhDH8n/+l//M48++j9z551f\nz513fj1f+codSX7zZWWv+N//+8m88MIL2bNndx5//LGMHTu+39bqt5UBAAAA7Ec//ekjWbXqjgwZ\n0pQTT5yU2bMvy4oVazJgwID85Cf/0Ovzn3vuuSxceGUuuWRuLrnk/8lnPnNVtm9/pt/WKw4BAAAA\n7EeHHjo8X//68jz66CPdY9u3P5MXX3wxxx573Os+9+WXX84118zPiSdOyqmnnpYPfvBDmTjxj7J4\n8VV5+eWX+2W9LisDAAAA2I9GjToqS5bcmNtuuzm/+tWvMnBgY5qahubTn16YUaOOTvLqew4lyYUX\nzs7/+B8/zq5du3LxxXO7xy+/fH4uuOATufXWmzN79qX7fb2VarVa3e+vuo+2bdtZ6yUcsEaObPbn\nR83Yf9SKvUct2X/Uir1HLdl/1Iq9t29Gjmx+zXGXlQEAAAAUTBwCAAAAKJh7DgHQqxk3rKv1Eg5o\nX51/cq2XAAAAv5EzhwAAAAAKJg4BAAAAFMxlZQAAAABv0v6+BUMtbkngzCEAAACAA8zmzf+Yiy++\nYL+8ljOHAAAAAA4gd9759fzgB9/PoEGD98vrOXMIAAAA4ADyjnccmc9+9nP77fXEIQAAAIADyEkn\n/V+pr99/F4OJQwAAAAAFE4cAAAAACuaG1AAAAABvUi1+9fz+5swhAAAAgAPM4Ycfkdtu+9p+eS1x\nCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDBx\nCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABSsvi+TPvKRj2To0KFJkiOP\nPDKf+tSnMn/+/FQqlRx//PFZvHhxBgwYkDVr1mT16tWpr6/PrFmzMmXKlOzatStXXnlltm/fnqam\npixdujQjRozo14MCAAAAoG96jUO7d+9OtVrNihUrusc+9alPZc6cOXnve9+ba665Jvfdd1/e8573\nZMWKFVm7dm12796dadOm5cQTT8xdd92VlpaWXHLJJbn33nuzbNmyXH311f16UAAAAAD0Ta+XlW3Z\nsiUvvvhiZsyYkY9//ON55JFHsnnz5kycODFJMnny5Dz00EP56U9/mrFjx6axsTHNzc0ZNWpUtmzZ\nkk2bNmXSpEndcx9++OH+PSIAAAAA+qzXM4cGDRqUT37yk/noRz+af/u3f8v555+farWaSqWSJGlq\nasrOnTvT0dGR5ubm7uc1NTWlo6Ojx/grc3szfPiQ1NfXvdljKt7Ikc29T4J+Yv/Bq/lcHPx8j6kV\ne49asv+oFXtv/+s1Dh1zzDE56qijUqlUcswxx+TQQw/N5s2bux/v7OzMsGHDMnTo0HR2dvYYb25u\n7jH+ytze7Njxwps5FvLrD8m2bb0HOOgP9h+8Np+Lg5t/9lEr9h61ZP9RK/bevvlNYa3Xy8q++c1v\n5oYbbkiSPP300+no6MiJJ56YjRs3Jkk2bNiQCRMmZMyYMdm0aVN2796dnTt3ZuvWrWlpacm4ceOy\nfv367rnjx4/fX8cEAAAAwD7q9cyhc845JwsWLEhbW1sqlUquv/76DB8+PIsWLUp7e3tGjx6dqVOn\npq6uLtOnT8+0adNSrVYzd+7cDBw4MG1tbZk3b17a2trS0NCQG2+88a04LgAAAAD6oFKtVqu1XsR/\n5RSxN88pdtSS/XfwmnHDulov4YD21fkn13oJ9CP/7KNW7D1qyf6jVuy9ffOmLysDAAAA4OAlDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYPW1XgDQdzNuWFfrJRzQvjr/5FovAQAA4LeOM4cAAAAA\nCiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAA\nCiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAA\nCiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIL1KQ5t3749f/Inf5Kt\nW7fmySefTFtbW6ZNm5bFixenq6srSbJmzZqcffbZaW1tzf33358k2bVrVy655JJMmzYt559/fp59\n9tn+OxIAAAAA3rBe49DevXtzzTXXZNCgQUmSJUuWZM6cOVm1alWq1Wruu+++bNu2LStWrMjq1auz\nfPnytLe3Z8+ePbnrrrvS0tKSVatW5ayzzsqyZcv6/YAAAAAA6Lte49DSpUvzsY99LIcddliSZPPm\nzZk4cWKSZPLkyXnooYfy05/+NGPHjk1jY2Oam5szatSobNmyJZs2bcqkSZO65z788MP9eCgAAAAA\nvFH1r/fgPffckxEjRmTSpEm57bbbkiTVajWVSiVJ0tTUlJ07d6ajoyPNzc3dz2tqakpHR0eP8Vfm\n9sXw4UNSX1/3pg6IZOTI5t4nQYF8NqgVe+/g53tMrdh71JL9R63Ye/vf68ahtWvXplKp5OGHH85j\njz2WefPm9bhvUGdnZ4YNG5ahQ4ems7Ozx3hzc3OP8Vfm9sWOHS+8mWMhv/6QbNvWtwgHpfHZoFbs\nvYObf/dSK/YetWT/USv23r75TWHtdS8ru/POO7Ny5cqsWLEiv//7v5+lS5dm8uTJ2bhxY5Jkw4YN\nmTBhQsaMGZNNmzZl9+7d2blzZ7Zu3ZqWlpaMGzcu69ev7547fvz4/XxYAAAAAOyL1z1z6LXMmzcv\nixYtSnt7e0aPHp2pU6emrq4u06dPz7Rp01KtVjN37twMHDgwbW1tmTdvXtra2tLQ0JAbb7yxP44B\nAAAAgDepz3FoxYoV3X+/cuXKVz3e2tqa1tbWHmODBw/OTTfdtA/LAwAAAKA/9frbygAAAAA4eIlD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolD\nAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAAChYfW8TXn755Vx99dV54oknUqlU8ud//ucZOHBg5s+f\nn0qlkuOPPz6LFy/OgAEDsmbNmqxevTr19fWZNWtWpkyZkl27duXKK6/M9u3b09TUlKVLl2bEiBFv\nxbEBAAAA0Itezxy6//77kySrV6/OnDlz8oUvfCFLlizJnDlzsmrVqlSr1dx3333Ztm1bVqxYkdWr\nV2f58uVpb2/Pnj17ctddd6WlpSWrVq3KWWedlWXLlvX7QQEAAADQN72eOXTKKafkpJNOSpL8x3/8\nR4YNG5aHHnooEydOTJJMnjw5Dz74YAYMGJCxY8emsbExjY2NGTVqVLZs2ZJNmzZl5syZ3XPFIQAA\nAIDfHr3GoSSpr6/PvHnz8nd/93e56aab8uCDD6ZSqSRJmpqasnPnznR0dKS5ubn7OU1NTeno6Ogx\n/src3gwfPiT19XVv5nhIMnJkc++ToEA+G9SKvXfw8z2mVuw9asn+o1bsvf2vT3EoSZYuXZorrrgi\nra2t2b17d/d4Z2dnhg0blqFDh6azs7PHeHNzc4/xV+b2ZseOF97IMfB/GDmyOdu29R7goEQ+G9SK\nvXdw8+9easXeo5bsP2rF3ts3vyms9XrPoW9961u59dZbkySDBw9OpVLJu971rmzcuDFJsmHDhkyY\nMCFjxozJpk2bsnv37uzcuTNbt25NS0tLxo0bl/Xr13fPHT9+/P46JgAAAAD2Ua9nDn3gAx/IggUL\ncu655+all17KVVddlWOPPTaLFi1Ke3t7Ro8enalTp6auri7Tp0/PtGnTUq1WM3fu3AwcODBtbW2Z\nN29e2tra0tDQkBtvvPGtOC4AAAAA+qDXODRkyJB88YtffNX4ypUrXzXW2tqa1tbWHmODBw/OTTfd\ntA9LBAAAAKC/9HpZGQAAAAAHL3EIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAUThwAAAAAKJg4B\nAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAAAAWrf70H9+7dm6uu\nuiq/+MUvsmfPnsyaNSvHHXdc5s+fn0qlkuOPPz6LFy/OgAEDsmbNmqxevTr19fWZNWtWpkyZkl27\nduXKK6/M9u3b09TUlKVLl2bEiBFv1bEBAAAA0IvXPXPoO9/5Tg499NCsWrUqt99+e6699tosWbIk\nc+bMyapVq1KtVnPfffdl27ZtWbFiRVavXp3ly5envb09e/bsyV133ZWWlpasWrUqZ511VpYtW/ZW\nHRcAAAAAffC6Zw6ddtppmTp1apKkWq2mrq4umzdvzsSJE5MkkydPzoMPPpgBAwZk7NixaWxsTGNj\nY0aNGpUtW7Zk06ZNmTlzZvdccQgAAADgt8vrxqGmpqYkSUdHRy699NLMmTMnS5cuTaVS6X58586d\n6ejoSHNzc4/ndXR09Bh/ZW5fDB8+JPX1dW/qgEhGjmzufRIUyGeDWrH3Dn6+x9SKvUct2X/Uir23\n/71uHEqSX/7yl7nooosybdq0/Omf/mk+97nPdT/W2dmZYcOGZejQoens7Owx3tzc3GP8lbl9sWPH\nC2/0OPj/jRzZnG3b+hbhoDQ+G9SKvbdvZtywrtZLOKB9df7JtV4C/cTPfdSS/Uet2Hv75jeFtde9\n59AzzzyTGTNm5Morr8w555yTJHnnO9+ZjRs3Jkk2bNiQCRMmZMyYMdm0aVN2796dnTt3ZuvWrWlp\nacm4ceOyfv367rnjx4/fn8cEAAAAwD563TOHbrnlljz//PNZtmxZ9/2CFi5cmOuuuy7t7e0ZPXp0\npk6dmrq6ukyfPj3Tpk1LtVrN3LlzM3DgwLS1tWXevHlpa2tLQ0NDbrzxxrfkoAAAAADom9eNQ1df\nfXWuvvrqV42vXLnyVWOtra1pbW3tMTZ48ODcdNNN+7hEAAAAAPrL615WBgAAAMDBTRwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICC9SkOPfroo5k+fXqS5Mknn0xbW1umTZuWxYsXp6ur\nK0myZs2anH322Wltbc3999+fJNm1a1cuueSSTJs2Leeff36effbZfjoMAAAAAN6MXuPQV77ylVx9\n9dXZvXt3kmTJkiWZM2dOVq1alWq1mvvuuy/btm3LihUrsnr16ixfvjzt7e3Zs2dP7rrrrrS0tGTV\nqlU566yzsmzZsn4/IAAAAAD6rr63CaNGjcqXvvSlfPrTn06SbN68ORMnTkySTJ48OQ8++GAGDBiQ\nsWPHprGxMY2NjRk1alS2bNmSTZs2ZebMmd1z+xqHhg8fkvr6ujd7TMUbObK51kuA30o+G9SKvUct\n2X8HN99fasn+o1bsvf2v1zg0derUPPXUU91fV6vVVCqVJElTU1N27tyZjo6ONDf/5zenqakpHR0d\nPcZfmdsXO3a88IYOgv80cmRztm3r258zlMZng1qx96gl++/g5ec+asn+o1bsvX3zm8LaG74h9YAB\n//mUzs7ODBs2LEOHDk1nZ2eP8ebm5h7jr8wFAAAA4LfHG45D73znO7Nx48YkyYYNGzJhwoSMGTMm\nmzZtyu7du7Nz585s3bo1LS0tGTduXNavX989d/z48ft39QAAAADsk14vK/uv5s2bl0WLFqW9vT2j\nR4/O1KlTU1dXl+nTp2fatGmpVquZO3duBg4cmLa2tsybNy9tbW1paGjIjTfe2B/HAAAAAMCb1Kc4\ndOSRR2bNmjVJkmOOOSYrV6581ZzW1ta0trb2GBs8eHBuuumm/bBMAAAAAPrDG76sDAAAAICDhzgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgE\nAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABSsvtYLAAAAoKcZ\nN6yr9RIOWF+df3KtlwAHHGcOAQAAABRMHAIAAAAomDgEAAAAUDD3HAIAgNfgni/7xn1fAA4c/R6H\nurq68pnPfCaPP/54Ghsbc9111+Woo47q77cFAAAA3iBhfN8cqGG83y8r++EPf5g9e/bk7rvvzuWX\nX54bbrihv98SAAAAgD6qVKvVan++wZIlSzJmzJh88IMfTJJMmjQpDzzwQH++JQAAAAB91O9nDnV0\ndGTo0KHdX9fV1eWll17q77cFAAAAoA/6PQ4NHTo0nZ2d3V93dXWlvt59sAEAAAB+G/R7HBo3blw2\nbNiQJHnkkUfS0tLS328JAAAAQB/1+z2HXvltZf/8z/+carWa66+/Pscee2x/viUAAAAAfdTvcQgA\nAACA3179flkZAAAAAL+9xCEAAACAgolDAAAAAAUThw4SXV1dtV4CQE3t2bOn1kugQLt27bL3qInt\n27fXegkUqKurK08//bT/9qBmnn322bhtcv8Qhw5g//7v/57Zs2dn8uTJOeWUU3LSSSflggsuyBNP\nPFHrpQH0m3Xr1mXKlCk59dRT8/3vf797fObMmTVcFaX4l3/5l8yePTsLFizIQw89lDPOOCNnnHFG\n7r///lovjYPcE0880eOvWbNmdf899KerrroqSfLoo49m6tSpufjii3PmmWfmkUceqfHKKMHatWvz\n5S9/OZs3b85pp52W8847L6eddloeeuihWi/toFNf6wXw5i1cuDCXX355/uAP/qB77JFHHsmCBQuy\nevXqGq4MoP/ccsst+da3vpWurq5cdtll2b17dz7ykY/4v0i8JRYvXpzLLrssv/jFL3LppZfmBz/4\nQQYOHJiZM2dmypQptV4eB7HzzjsvgwYNymGHHZZqtZonnngi11xzTSqVSu64445aL4+D2FNPPZUk\n+cIXvpCvfOUrOfroo/P000/n8ssvz8qVK2u8Og52q1atyooVKzJr1qz89V//dY455pg8/fTTmT17\ndt7//vfXenkHFXHoALZnz54eYShJ3vOe99RoNZRm+vTp2bt3b4+xarWaSqUiTtKvGhoacsghhyRJ\nli1blk984hM5/PDDU6lUarwyStDV1ZWJEycmSTZu3Ji3ve1tSZL6ej9S0b/Wrl2bxYsXp62tLSee\neGKmT5+eFStW1HpZFKSuri5HH310kuR3fud3XFrGW6KhoSFDhgxJU1NTfvd3fzfJr/efn/v2Pz/J\nHMBOOOGELFiwIJMmTUpzc3M6Ozuzfv36nHDCCbVeGgW44oorcvXVV+fmm29OXV1drZdDQd7xjndk\nyZIlueyyyzJ06NB8+ctfzic/+ck8//zztV4aBTjmmGOycOHCXHvttbnhhhuSJLfddlve/va313hl\nHOze9ra35a/+6q+ydOnS/OxnP6v1cihIR0dHzj777Lzwwgv5xje+kQ996EO54YYbcsQRR9R6aRTg\n5JNPzqxZs9LS0pILL7wwkyZNygMPPJD3ve99tV7aQadSdR7+AatareaHP/xhNm3alI6OjgwdOjTj\nxo3LqaeeqqTylrj99ttz1FFH5dRTT631UijISy+9lO985zs5/fTTM3jw4CTJM888k1tvvTULFy6s\n8eo42HXLovUnAAAFR0lEQVR1dWXdunU55ZRTuse+/e1v5wMf+ED3foT+ds899+See+5xSQ9vmT17\n9mTLli0ZNGhQjj766KxduzbnnHNOGhoaar00CvDjH/84P/rRj7Jjx44ceuihGT9+fE466aRaL+ug\nIw4BAAAAFMxvKwMAAAAomDgEAAAAUDA3pAYADmhPPfVUTjvttBx77LE9xltbW7N8+fIMGjQoDQ0N\n2bt3b4YNG5arrroqY8aMSfLrG13ecccdOfLII7ufN3369Fx88cV573vfmz179uTmm2/OunXrMmDA\ngAwcODBz5szp8etzd+zYkcmTJ2fu3LmZMWNGkuTxxx/Ppz/96STJL3/5ywwZMiSHHHJIGhsb841v\nfKPHeyTJ1772tdx9992pq6tLXV1dWltbc+655yb59f1lli5dmnvvvbf7xtdPPfVUPv7xj2fdunX9\n9KcKAJREHAIADniHHXZYvv3tb79qfPny5bntttu648/f//3f5/zzz8/f/M3fZMSIEb2+7oIFC9LY\n2JhvfvObGThwYB5//PHMmDEjX//613PcccclSb73ve9lypQpufvuu3PeeeelUqnkhBNO6F7P/Pnz\nM3HixJx99tmv+R5f+tKX8pOf/CQrVqzI29/+9jz77LOZPXt2nnvuuVx00UVJks7OzixevDg333zz\nm/rzAQB4PS4rAwCKcdJJJ2XMmDH53ve+1+vcJ598MuvWrcuiRYsycODAJMkJJ5yQ9vb2DBo0qHve\nPffck3PPPTeNjY35h3/4hze0nhdffDHLly/P9ddf331W0IgRI3Ldddfl9ttvz4svvpgkmTp1ap58\n8sl897vffUOvDwDQF84cAgAOeL/61a/y4Q9/uMfYX/7lX77m3OOPPz7/+q//2utrPvbYYznuuOMy\nZMiQHuOvXAqWJFu2bMm2bdsyYcKEnH766Vm9enX+6I/+qM/r/vnPf57Bgwf3uKwtSY477rg0NjZ2\nr7OhoSFLlizJhRde+IZeHwCgL8QhAOCA95suK3stlUql+8yfSqXyqser1WoGDBiQAQMGpFqtvu5r\nrV27Nqeddlrq6upyxhlnZNmyZXnmmWe6zwLqy1pefvnl13zspZde6vH1u9/97nz0ox/N4sWLs2DB\ngj69PgBAX7isDAAoyuOPP9598+pDDjkkO3fu7PH49u3bM2zYsLzrXe/K1q1bs2vXrh6Pf+1rX8u9\n996bvXv35rvf/W7+9m//NieffHL3zajXrl3b57Ucd9xx2bt376vOZPr5z3+erq6ujB49usf4RRdd\nlCeffLJPl8UBAPSVOAQAFGPdunV57LHHcvrppydJ3ve+92Xt2rXdZwj9+Mc/zgsvvJBjjz02Rxxx\nRE466aRce+212b17d5Lkn/7pn3L77bfn+OOPz/33358RI0bkRz/6UdatW5d169blL/7iL7JmzZpe\nzzh6xeDBgzNr1qwsXLgw27dvT/LrOLVo0aLMnDkzgwcP7jG/sbExS5YsyS233LK//kgAAFxWBgAc\n+F7rnkN/+Id/mCS54IIL0tDQkCQZPnx4br/99gwdOjRJMnv27Hz2s5/NmWeemUqlkkMOOSTLli1L\nff2vf0S6/vrr8/nPfz4f/vCH09jYmMGDB+dzn/tcWlpa0t7enra2th7veeaZZ6a9vT0PPPBAJk+e\n3Ke1X3DBBWlubs6f/dmfpVqtplKp5GMf+1j3r7L/r9797nfnE5/4hJtTAwD7TaXa1/+1BQAAAMBB\nx2VlAAAAAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDB/j9/uzOM\nI/FwfwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x5300c550>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_, ax = plt.subplots(figsize=(20,8))\n",
     "table_2.plot( kind='bar', stacked=False, ax=ax)\n",
