Task 10 image for only 350 lines of dataset

--- a/HW_01/hw1-task.ipynb
+++ b/HW_01/hw1-task.ipynb
@@ -3290,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -3302,18 +3302,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>SEX</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4354</td>\n",
+       "      <td>6231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5374</td>\n",
+       "      <td>8656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>2927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>95</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "SEX           1     2\n",
+       "EDUCATION            \n",
+       "0             8     6\n",
+       "1          4354  6231\n",
+       "2          5374  8656\n",
+       "3          1990  2927\n",
+       "4            42    81\n",
+       "5            95   185\n",
+       "6            25    26"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABIcAAAHbCAYAAABRBfqwAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X+UV/V95/HX/GD4MQwqiXY1qVHUsc1JaAVK8wsKrgY0\nNlrXcjJkidEa7eAvqD9AEclG44iN06wNRA3sGlFEUzzNz9Zz4ljUaInLhiS1YlPqsdUag4iVGYQB\n57t/5Dh7piozCuNX+Dwe53iO3Llz531nPl8dn957vzWVSqUSAAAAAIpUW+0BAAAAAKgecQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABauv9gBvZNOmrdUeYZ910EEjsmXLtmqPQaGsP6rF2qOarD+q\nxdqjmqw/qsXa2zMHH9z0httdObSfqa+vq/YIFMz6o1qsParJ+qNarD2qyfqjWqy9wSEOAQAAABRM\nHAIAAAAomDgEAAAAUDBxCAAAAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAAClZf7QEAAAAA\n9jf/8A8/zy23fC0vv/wf6enpySGH/Jecf/7FGTPmqHziExMyZsxRqa2t6/M5bW1fycsvv5yLLjov\n//N/fj2/9VsfTJK89NJLOffcMzNnzmX52Mc+sddnFYcAAAAA9qLu7u7Mmzcn7e1Lcuyxv5Ukue++\nH+TSSy/Kt771nSTJTTfdkgMPPPB1n3vooYeltfWiLFw4P8uX35ERI0bk6qvn51Of+vSghKFEHAIA\nAADYq7Zv357Ozs688sq23m2f/ORJaWxsTE9PT7+ff9pp/y0///n6tLV9Ke973/vT1NSUz33u7EGb\nVxwCAAAA2ItGjRqV1tYLc8klF2b06Pdm7NixOe64CTnhhGkZMmRIkuSii87rc1vZoYcelra2r/T+\n+dJLr8xZZ83ML37xZG6//e7U1NQM2rziEAAAAMBe9pnP/Pd8+tN/lJ/85P/mpz/9v7nzzm/mzju/\nmW984/Ykb35b2Wv+9V+fzrZt29LdvSNPPvlEjjtu/KDN6t3KAAAAAPain/1sfVauvD0jRjTm4x+f\nlNmzL86KFfektrY2jz329/1+/ksvvZQFCy7LhRfOzYUX/lm++MUrs3nzC4M2rzgEAAAAsBcdeOBB\n+eY3l+enP13fu23z5hfyyiuv5Kijjt7t57766qu5+ur5+fjHJ+XEE6fnU5/6dCZO/GgWLboyr776\n6qDM67YyAAAAgL3o8MM/kLa2G3PrrUvyq1/9KkOHNqSxcWQuv3xBDj/8iCSvf+ZQkpx33uz8n//z\n42zfvj0XXDC3d/sll8zPueeemVtuWZLZsy/a6/PWVCqVyl4/6h7atGlrtUfYZx18cJPvH1Vj/VEt\n1h7VZP1RLdYe1WT9US3W3p45+OCmN9zutjIAAACAgolDAAAAAAXzzCEA9nkz7m6t9gi7teT4G6o9\nAgAAvClXDgEAAAAUTBwCAAAAKJjbygAAAADeprOv79irx/tf84/fq8cbCFcOAQAAAOxjHn/8H3LB\nBefulWO5cggAAABgH3Lnnd/Mfff9IMOGDd8rx3PlEAAAAMA+5H3ve3++/OU/32vHE4cAAAAA9iFT\npvzX1NfvvZvBxCEAAACAgolDAAAAAAXzQGoAAACAt6kabz2/t7lyCAAAAGAfc+ihh+XWW2/bK8cS\nhwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDeyh4AAADgbTq/4/K9erwlx9+wV483\nEOIQAAAAwD5i165daWv7H3nuueeyc2d3zjzzT/KJT/zBHh1THAIAAADYR9x33w8yatSBWbjwmrz8\n8n/k85+fKQ4BAAAAlGLq1BMydep/TZJUKpXU1e152hGHAAAAAPYRI0aMSJJs29aVq66aly98oXWP\nj+ndygAAAAD2Ic8//8tceOGfZtq0k/PJT07f4+O5cggAAABgH/Hii5vzZ392QebOvTwTJkzcK8cU\nhwAAAADepnf6redvv/1/Z+vWrbnttmW57bZlSZIbb7wpQ4cOe9vHFIcAAAAA9hFz5lyaOXMu3avH\n9MwhAAAAgIKJQwAAAAAFE4cAAAAACtbvM4d27tyZ+fPn59lnn01tbW2uueaa1NfXZ/78+ampqckx\nxxyTRYsWpba2Nvfcc09WrVqV+vr6tLa2ZurUqdm+fXsuu+yybN68OY2NjVm8eHFGjx79TpwbAAAA\nAP3o98qhNWvWZNeuXVm1alXOP//8fPWrX01bW1vmzJmTlStXplKp5P7778+mTZuyYsWKrFq1KsuX\nL097e3u6u7tz1113pbm5OStXrsxpp52WpUuXvhPnBQAAAMAA9Hvl0JFHHplXX301PT096ezsTH19\nfdavX5+JEycmSSZPnpwf/ehHqa2tzXHHHZeGhoY0NDTk8MMPz4YNG7Ju3bqcc845vfsOJA4ddNCI\n1NfX7eGplevgg5uqPQIFs/7g9bwu9n9+xlSLtUc1WX9Ui7W39/Ubh0aMGJFnn302J510UrZs2ZKb\nb745jz32WGpqapIkjY2N2bp1azo7O9PU9P9/QI2Njens7Oyz/bV9+7Nly7a3ez7FO/jgpmza1P/3\nGAaD9QdvzOti/+affVSLtUc1WX9Ui7W3Z94srPUbh2677bZ84hOfyCWXXJLnnnsuZ555Znbu3Nn7\n8a6urowaNSojR45MV1dXn+1NTU19tr+2LwAAAADvDv0+c2jUqFG9V/4ccMAB2bVrVz74wQ9m7dq1\nSZIHH3wwEyZMyNixY7Nu3brs2LEjW7duzcaNG9Pc3Jxx48ZlzZo1vfuOHz9+EE8HAAAAgLei3yuH\nPv/5z+fKK6/MzJkzs3PnzsydOzcf+tCHsnDhwrS3t2fMmDGZNm1a6urqMmvWrMycOTOVSiVz587N\n0KFD09LSknnz5qWlpSVDhgzJjTfe+E6cFwAAAAADUFOpVCrVHuI/c//g2+f+S6rJ+qNazu+4vNoj\n7NaS42+o9ggMIv/so1qsParJ+qNarL0982bPHOr3tjIAAAAA9l/iEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAACiYOAQAAABQMHEIAAAAoGDiEAAAAEDBxCEAAACAgolDAAAA\nAAUThwAAAAAKJg4BAAAAFEwcAgAAAChYfbUHAPYfM+5urfYIu7Xk+BuqPQIAAMC7jiuHAAAAAAom\nDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICC1Q9kp1tuuSUdHR3ZuXNn\nWlpaMnHixMyfPz81NTU55phjsmjRotTW1uaee+7JqlWrUl9fn9bW1kydOjXbt2/PZZddls2bN6ex\nsTGLFy/O6NGjB/u8AAAAABiAfq8cWrt2bX7yk5/krrvuyooVK/LLX/4ybW1tmTNnTlauXJlKpZL7\n778/mzZtyooVK7Jq1aosX7487e3t6e7uzl133ZXm5uasXLkyp512WpYuXfpOnBcAAAAAA9BvHHr4\n4YfT3Nyc888/P3/6p3+aKVOm5PHHH8/EiROTJJMnT84jjzySn/3sZznuuOPS0NCQpqamHH744dmw\nYUPWrVuXSZMm9e776KOPDu4ZAQAAADBg/d5WtmXLlvz7v/97br755jzzzDNpbW1NpVJJTU1NkqSx\nsTFbt25NZ2dnmpqaej+vsbExnZ2dfba/tm9/DjpoROrr697uORXv4IOb+t8JCuS1QbVYe/s/P2Oq\nxdqjmqw/qsXa2/v6jUMHHnhgxowZk4aGhowZMyZDhw7NL3/5y96Pd3V1ZdSoURk5cmS6urr6bG9q\nauqz/bV9+7Nly7a3cy7k1y+STZv6D3BQIq8NqsXa27/5dy/VYu1RTdYf1WLt7Zk3C2v93lY2fvz4\nPPTQQ6lUKnn++efzyiuv5KMf/WjWrl2bJHnwwQczYcKEjB07NuvWrcuOHTuydevWbNy4Mc3NzRk3\nblzWrFnTu+/48eP34mkBAAAAsCf6vXJo6tSpeeyxx3LGGWekUqnk6quvzvvf//4sXLgw7e3tGTNm\nTKZNm5a6urrMmjUrM2fOTKVSydy5czN06NC0tLRk3rx5aWlpyZAhQ3LjjTe+E+cFAAAAwAAM6K3s\nL7/88tdtu+OOO163bcaMGZkxY0afbcOHD89NN930NscDAAAAYDD1e1sZAAAAAPsvcQgAAACgYOIQ\nAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQ\nAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQ\nAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFCw+moPAMC739nX\nd1R7hN0aPrHaEwAAwL7LlUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACg\nYOIQAAAAQMHEIQAAAICC1Vd7AGDgzr6+o9oj7NbwidWeAAAAgLfKlUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEA\nAAAUTBwCAAAAKJg4BAAAAFCwAcWhzZs35w/+4A+ycePGPP3002lpacnMmTOzaNGi9PT0JEnuueee\nnH766ZkxY0YeeOCBJMn27dtz4YUXZubMmfnCF76QF198cfDOBAAAAIC3rN84tHPnzlx99dUZNmxY\nkqStrS1z5szJypUrU6lUcv/992fTpk1ZsWJFVq1aleXLl6e9vT3d3d2566670tzcnJUrV+a0007L\n0qVLB/2EAAAAABi4fuPQ4sWL85nPfCaHHHJIkuTxxx/PxIkTkySTJ0/OI488kp/97Gc57rjj0tDQ\nkKamphx++OHZsGFD1q1bl0mTJvXu++ijjw7iqQAAAADwVtXv7oP33ntvRo8enUmTJuXWW29NklQq\nldTU1CRJGhsbs3Xr1nR2dqapqan38xobG9PZ2dln+2v7DsRBB41IfX3d2zohkoMPbup/JyiQ1wbV\nYu3t//yMqRZrj2qy/qgWa2/v220cWr16dWpqavLoo4/miSeeyLx58/o8N6irqyujRo3KyJEj09XV\n1Wd7U1NTn+2v7TsQW7ZsezvnQn79Itm0aWARDkrjtUG1WHv7N//upVqsParJ+qNarL0982Zhbbe3\nld1555254447smLFivz2b/92Fi9enMmTJ2ft2rVJkgcffDATJkzI2LFjs27duuzYsSNbt27Nxo0b\n09zcnHHjxmXNmjW9+44fP34vnxYAAAAAe2K3Vw69kXnz5mXhwoVpb2/PmDFjMm3atNTV1WXWrFmZ\nOXNmKpVK5s6dm6FDh6alpSXz5s1LS0tLhgwZkhtvvHEwzgEAAACAt2nAcWjFihW9f3/HHXe87uMz\nZszIjBkz+mwbPnx4brrppj0YDwAAAIDB1O+7lQEAAACw/xKHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4\nBAAAAFAwcQgAAACgYPXVHgAAYF824+7Wao+wW0uOv6HaIwAA73KuHAIAAAAomDgEAAAAUDBxCAAA\nAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAA\nAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAA\nAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAA\nAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDBxCAAA\nAKBg4hAAAABAwcQhAAAAgIKJQwAAAAAFE4cAAAAACiYOAQAAABRMHAIAAAAoWP3uPrhz585ceeWV\nefbZZ9Pd3Z3W1tYcffTRmT9/fmpqanLMMcdk0aJFqa2tzT333JNVq1alvr4+ra2tmTp1arZv357L\nLrssmzdvTmNjYxYvXpzRo0e/U+cGAAAAQD92e+XQd77znRx44IFZuXJlli1blmuuuSZtbW2ZM2dO\nVq5cmUqlkvvvvz+bNm3KihUrsmrVqixfvjzt7e3p7u7OXXfdlebm5qxcuTKnnXZali5d+k6dFwAA\nAAADsNsrh6ZPn55p06YlSSqVSurq6vL4449n4sSJSZLJkyfnRz/6UWpra3PccceloaEhDQ0NOfzw\nw7Nhw4asW7cu55xzTu++A41DBx00IvX1dXtyXkU7+OCmao8A70peG1SLtUc1WX/7Nz9fqsn6o1qs\nvb1vt3GosbExSdLZ2ZmLLrooc+bMyeLFi1NTU9P78a1bt6azszNNTU19Pq+zs7PP9tf2HYgtW7a9\nrZPh1y+STZsG9n2G0nhtUC3W3p45+/qOao+wW8MnVnuC3bP+9l9+76OarD+qxdrbM28W1vp9IPVz\nzz2Xz33uczn11FPzh3/4h6mt/f+f0tXVlVGjRmXkyJHp6urqs72pqanP9tf2BQAAAODdY7dx6IUX\nXsjZZ5+dyy67LGeccUaS5IMf/GDWrl2bJHnwwQczYcKEjB07NuvWrcuOHTuydevWbNy4Mc3NzRk3\nblzWrFnTu+/48eMH+XQAAAAAeCt2e1vZzTffnJdffjlLly7tfV7QggULcu2116a9vT1jxozJtGnT\nUldXl1mzZmXmzJmpVCqZO3duhg4dmpaWlsybNy8tLS0ZMmRIbrzxxnfkpAAAAAAYmN3GoauuuipX\nXXXV67bfcccdr9s2Y8aMzJgxo8+24cOH56abbtrDEQEAAAAYLP0+cwgAAACA/Zc4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKJg4BAAAAFAwcQgA\nAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABROHAAAAAAomDgEAAAAUTBwCAAAAKFh9tQcAAABg3zLj\n7tZqj/Cmlhx/Q7VHgH2OK4cAAAAACiYOAQAAABRMHAIAAAAomDgEAAAAUDAPpAYAgH3Qu/mBwImH\nAu+ps6/vqPYIuzV8YrUnAPYmVw4BAAAAFGzQrxzq6enJF7/4xTz55JNpaGjItddemw984AOD/WUB\nAGCPuHIDgFIMehz64Q9/mO7u7tx9991Zv359rr/++nz9618f7C8LAAAAvEXv/jD+t9UeYbf21Vtq\nayqVSmUwv0BbW1vGjh2bT33qU0mSSZMm5aGHHhrMLwkAAADAAA36M4c6OzszcuTI3j/X1dVl165d\ng/1lAQAAABiAQY9DI0eOTFdXV++fe3p6Ul/vTdIAAAAA3g0GPQ6NGzcuDz74YJJk/fr1aW5uHuwv\nCQAAAMAADfozh157t7J/+qd/SqVSyXXXXZejjjpqML8kAAAAAAM06HEIAAAAgHevQb+tDAAAAIB3\nL3EIAAAAoGDiEAAAAEDBxKH9RE9PT7VHAKiq7u7uao9AgbZv327tURWbN2+u9ggUqKenJ88//7z/\n9qBqXnzxxXhs8uAQh/Zh//Zv/5bZs2dn8uTJOeGEEzJlypSce+65eeqpp6o9GsCg6ejoyNSpU3Pi\niSfmBz/4Qe/2c845p4pTUYp//ud/zuzZs3PFFVfkkUceycknn5yTTz45DzzwQLVHYz/31FNP9fmr\ntbW19+9hMF155ZVJkp/+9KeZNm1aLrjggpxyyilZv359lSejBKtXr87Xvva1PP7445k+fXrOOuus\nTJ8+PY888ki1R9vv1Fd7AN6+BQsW5JJLLsnv/M7v9G5bv359rrjiiqxataqKkwEMnptvvjl//dd/\nnZ6enlx88cXZsWNH/uiP/sj/ReIdsWjRolx88cV59tlnc9FFF+W+++7L0KFDc84552Tq1KnVHo/9\n2FlnnZVhw4blkEMOSaVSyVNPPZWrr746NTU1uf3226s9HvuxZ555JknyF3/xF/nGN76RI444Is8/\n/3wuueSS3HHHHVWejv3dypUrs2LFirS2tubrX/96jjzyyDz//POZPXt2Pvaxj1V7vP2KOLQP6+7u\n7hOGkuR3f/d3qzQNpZk1a1Z27tzZZ1ulUklNTY04yaAaMmRIDjjggCTJ0qVLc+aZZ+bQQw9NTU1N\nlSejBD09PZk4cWKSZO3atXnPe96TJKmv9ysVg2v16tVZtGhRWlpa8vGPfzyzZs3KihUrqj0WBamr\nq8sRRxyRJPmN3/gNt5bxjhgyZEhGjBiRxsbG/OZv/maSX68/v/ftfX6T2Ycde+yxueKKKzJp0qQ0\nNTWlq6sra9asybHHHlvt0SjApZdemquuuipLlixJXV1dtcehIO973/vS1taWiy++OCNHjszXvva1\n/Mmf/Elefvnlao9GAY488sgsWLAg11xzTa6//vokya233pr3vve9VZ6M/d173vOefPWrX83ixYvz\n85//vNrjUJDOzs6cfvrp2bZtW771rW/l05/+dK6//vocdthh1R6NAhx//PFpbW1Nc3NzzjvvvEya\nNCkPPfRQPvKRj1R7tP1OTcV1+PusSqWSH/7wh1m3bl06OzszcuTIjBs3LieeeKKSyjti2bJl+cAH\nPpATTzyx2qNQkF27duU73/lOTjrppAwfPjxJ8sILL+SWW27JggULqjwd+7uenp50dHTkhBNO6N32\n7W9/O5/85Cd71yMMtnvvvTf33nuvW3p4x3R3d2fDhg0ZNmxYjjjiiKxevTpnnHFGhgwZUu3RKMCP\nf/zjPPzww9myZUsOPPDAjB8/PlOmTKn2WPsdcQgAAACgYN6tDAAAAKBg4hAAAABAwTyQGgDYpz3z\nzDOZPn16jjrqqD7bZ8yYkeXLl2fYsGEZMmRIdu7cmVGjRuXKK6/M2LFjk/z6QZe333573v/+9/d+\n3qxZs3LBBRfk93//99Pd3Z0lS5ako6MjtbW1GTp0aObMmdPn7XO3bNmSyZMnZ+7cuTn77LOTJE8+\n+WQuv/yP/neaAAAETElEQVTyJMlzzz2XESNG5IADDkhDQ0O+9a1v9fkaSXLbbbfl7rvvTl1dXerq\n6jJjxox89rOfTfLr58ssXrw43//+93sffP3MM8/kc5/7XDo6OgbpuwoAlEQcAgD2eYcccki+/e1v\nv2778uXLc+utt/bGn7/7u7/LF77whfzN3/xNRo8e3e9xr7jiijQ0NOSv/uqvMnTo0Dz55JM5++yz\n881vfjNHH310kuR73/tepk6dmrvvvjtnnXVWampqcuyxx/bOM3/+/EycODGnn376G36Nv/zLv8xj\njz2WFStW5L3vfW9efPHFzJ49Oy+99FLOP//8JElXV1cWLVqUJUuWvK3vDwDA7ritDAAoxpQpUzJ2\n7Nh873vf63ffp59+Oh0dHVm4cGGGDh2aJDn22GPT3t6eYcOG9e5377335rOf/WwaGhry93//929p\nnldeeSXLly/Pdddd13tV0OjRo3Pttddm2bJleeWVV5Ik06ZNy9NPP53vfve7b+n4AAAD4cohAGCf\n96tf/Sqnnnpqn2033HDDG+57zDHH5F/+5V/6PeYTTzyRo48+OiNGjOiz/bVbwZJkw4YN2bRpUyZM\nmJCTTjopq1atykc/+tEBz/2LX/wiw4cP73NbW5IcffTRaWho6J1zyJAhaWtry3nnnfeWjg8AMBDi\nEACwz3uz28reSE1NTe+VPzU1Na/7eKVSSW1tbWpra1OpVHZ7rNWrV2f69Ompq6vLySefnKVLl+aF\nF17ovQpoILO8+uqrb/ixXbt29fnzhz/84fzxH/9xFi1alCuuuGJAxwcAGAi3lQEARXnyySd7H159\nwAEHZOvWrX0+vnnz5owaNSof+tCHsnHjxmzfvr3Px2+77bZ8//vfz86dO/Pd7343f/u3f5vjjz++\n92HUq1evHvAsRx99dHbu3Pm6K5l+8YtfpKenJ2PGjOmz/fzzz8/TTz89oNviAAAGShwCAIrR0dGR\nJ554IieddFKS5CMf+UhWr17de4XQj3/842zbti1HHXVUDjvssEyZMiXXXHNNduzYkST5x3/8xyxb\ntizHHHNMHnjggYwePToPP/xwOjo60tHRkS996Uu55557+r3i6DXDhw9Pa2trFixYkM2bNyf5dZxa\nuHBhzjnnnAwfPrzP/g0NDWlra8vNN9+8t74lAABuKwMA9n1v9Myh3/u930uSnHvuuRkyZEiS5KCD\nDsqyZcsycuTIJMns2bPz5S9/OaecckpqampywAEHZOnSpamv//WvSNddd12+8pWv5NRTT01DQ0OG\nDx+eP//zP09zc3Pa29vT0tLS52uecsopaW9vz0MPPZTJkycPaPZzzz03TU1N+fznP59KpZKampp8\n5jOf6X0r+//swx/+cM4880wPpwYA9pqaykD/1xYAAAAA+x23lQEAAAAUTBwCAAAAKJg4BAAAAFAw\ncQgAAACgYOIQAAAAQMHEIQAAAICCiUMAAAAABft/prPdPJKFkn8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x27457a58>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Настраиваем вид графика. Две соседние колонки для пола это  stacked=False\n",
     "_, ax = plt.subplots(figsize=(20,8))\n",
