--- a/HW_02/ml-intro-hw.ipynb
+++ b/HW_02/ml-intro-hw.ipynb
@@ -1375,7 +1375,8 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "raw_mimetype": "text/markdown"
    },
    "source": [
     "# 1.1 Есть пропуски в данных в полях: 'GEN_INDUSTRY','GEN_TITLE', 'ORG_TP_STATE','ORG_TP_FCAPITAL', 'JOB_DIR','TP_PROVINCE', 'REGION_NM','WORK_TIME', 'PREVIOUS_CARD_NUM_UTILIZED'\n",
@@ -1446,7 +1447,8 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "raw_mimetype": "text/html"
    },
    "source": [
     "#### Задание 2. Есть ли категориальные признаки? Что с ними делать?\n",
@@ -3226,6 +3228,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
