--- a/HW_02/ml-intro-hw.ipynb
+++ b/HW_02/ml-intro-hw.ipynb
@@ -1376,7 +1376,7 @@
    "cell_type": "raw",
    "metadata": {
     "collapsed": true,
-    "raw_mimetype": "text/markdown"
+    "raw_mimetype": "text/html"
    },
    "source": [
     "# 1.1 Есть пропуски в данных в полях: 'GEN_INDUSTRY','GEN_TITLE', 'ORG_TP_STATE','ORG_TP_FCAPITAL', 'JOB_DIR','TP_PROVINCE', 'REGION_NM','WORK_TIME', 'PREVIOUS_CARD_NUM_UTILIZED'\n",
